Bring up gpu_unittests on Fuchsia

Add Fuchsia to the list of possible operating systems in GPUTestConfig.

Disable GpuFenceManagerTest since it depends on
EGL_ANDROID_native_fence_sync, which is not something that Fuchsia will
have.

Work around the fact that many tests initialize the GPU without providing
a message loop.

Bug: 923115
Test: out/fuchsia_rel/bin/run_gpu_unittests

Change-Id: I9d55118a99ad1f8fd0f62296b4af668d0c75290f

Reviewed-on: https://chromium-review.googlesource.com/c/1419282
Commit-Queue: Michael Spang <spang@chromium.org>
Reviewed-by: Kenneth Russell <kbr@chromium.org>
Cr-Commit-Position: refs/heads/master@{#624349}
Former-commit-id: 9b29875a0f1ac9c515df5b02195ad7997d0b3e7b